--- a/appveyor.yml
+++ b/appveyor.yml
@@ -31,7 +31,7 @@ build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
   - C:\projects\julia\bin\julia -e "versioninfo();
-      Pkg.clone(pwd(), \"MultiScaleModels\"); Pkg.build(\"MultiScaleModels\")"
+      Pkg.clone(pwd(), \"MultiScaleArrays\"); Pkg.build(\"MultiScaleArrays\")"
 
 test_script:
-  - C:\projects\julia\bin\julia -e "Pkg.test(\"MultiScaleModels\")"
+  - C:\projects\julia\bin\julia -e "Pkg.test(\"MultiScaleArrays\")"
