--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "1.5.0"
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 TreeViews = "a2a6695c-b41b-5b7d-aed9-dbfdeacea5d7"
 
