--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,8 @@ version = "1.6.0"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
@@ -13,9 +15,9 @@ TreeViews = "a2a6695c-b41b-5b7d-aed9-dbfdeacea5d7"
 [compat]
 DiffEqBase = "6.5"
 RecursiveArrayTools = "1,2"
-TreeViews = "0.3"
 StochasticDiffEq = "6.13"
-julia = "1"
+TreeViews = "0.3"
+julia = "1.3"
 
 [extras]
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
