--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,11 @@ TreeViews = "a2a6695c-b41b-5b7d-aed9-dbfdeacea5d7"
 
 [compat]
 DiffEqBase = "6.5"
+FiniteDiff = "2.3"
+ForwardDiff = "0.10"
+OrdinaryDiffEq = "5.33"
 RecursiveArrayTools = "1,2"
+SparseDiffTools = "1.6"
 StochasticDiffEq = "6.13"
 TreeViews = "0.3"
 julia = "1.3"
