--- a/Project.toml
+++ b/Project.toml
@@ -23,6 +23,7 @@ ForwardDiff = "0.10"
 OrdinaryDiffEq = "5.33, 6"
 RecursiveArrayTools = "1,2"
 SparseDiffTools = "1.6, 2"
+Statistics = "1"
 StochasticDiffEq = "6.13"
 TreeViews = "0.3"
 julia = "1.6"
