--- a/Project.toml
+++ b/Project.toml
@@ -16,20 +16,26 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 
 [compat]
+Aqua = "0.8"
 DiffEqBase = "6.5"
 FiniteDiff = "2.3"
 ForwardDiff = "0.10"
+LinearAlgebra = "1"
 OrdinaryDiffEq = "5.33, 6"
+Random = "1"
 RecursiveArrayTools = "1,2,3"
+SafeTestsets = "0.1"
 SparseDiffTools = "1.6, 2"
 Statistics = "1"
 StochasticDiffEq = "6.13"
+Test = "1"
 julia = "1.6"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["OrdinaryDiffEq", "SafeTestsets", "Test"]
+test = ["Aqua", "OrdinaryDiffEq", "SafeTestsets", "Test"]
