--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -24,7 +24,8 @@ jobs:
       matrix:
         version:
           - "1"
-          - "1.6"
+          - "lts"
+          - "pre"
     uses: "SciML/.github/.github/workflows/tests.yml@v1"
     with:
       julia-version: "${{ matrix.version }}"
