--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "MultiScaleArrays"
 uuid = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
 authors = ["Chris Rackauckas <accounts@chrisrackauckas.com>"]
-version = "1.13.0"
+version = "1.14.0"
 
 [deps]
 DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
@@ -11,9 +11,14 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
-SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
+
+[weakdeps]
+SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
+
+[extensions]
+MultiScaleArraysSparseDiffToolsExt = "SparseDiffTools"
 
 [compat]
 DiffEqBase = "6.5"
@@ -24,7 +29,7 @@ RecursiveArrayTools = "1,2,3"
 SparseDiffTools = "1.6, 2"
 Statistics = "1"
 StochasticDiffEq = "6.13"
-julia = "1.6"
+julia = "1.10"
 
 [extras]
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
