Use OrdinaryDiffEqDifferentiation resizing tools

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 OrdinaryDiffEqCore = "bbf590c4-e513-4bbe-9b18-05decba2e5d8"
+OrdinaryDiffEqDifferentiation = "4302a76b-040a-498a-8c04-15b101fed76b"
 OrdinaryDiffEqRosenbrock = "43230ef6-c299-4910-a778-202eb28ce4ce"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
@@ -29,8 +30,9 @@ DiffEqBase = "6.5"
 DifferentiationInterface = "0.7.7"
 FiniteDiff = "2.3"
 ForwardDiff = "0.10"
-OrdinaryDiffEq = "5.33, 6"
+OrdinaryDiffEq = "6"
 OrdinaryDiffEqCore = "1.30.0"
+OrdinaryDiffEqDifferentiation = "1.16"
 OrdinaryDiffEqRosenbrock = "1.17.0"
 RecursiveArrayTools = "1,2,3"
 SparseDiffTools = "1.6, 2"
