--- a/Project.toml
+++ b/Project.toml
@@ -35,6 +35,7 @@ OrdinaryDiffEqCore = "1.30.0"
 OrdinaryDiffEqDifferentiation = "1.16"
 OrdinaryDiffEqRosenbrock = "1.17.0"
 RecursiveArrayTools = "1,2,3"
+SciMLBase = "2.116"
 SparseDiffTools = "1.6, 2"
 Statistics = "1"
 StochasticDiffEq = "6.13"
