--- a/dev/assets/Project.toml
+++ b/dev/assets/Project.toml
@@ -1,7 +1,10 @@
 [deps]
-MultiScaleArrays = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+MultiScaleArrays = "f9640e96-87f6-5992-9c3b-0743c6a49ffa"
+
+[sources]
+MultiScaleArrays = {path = "/home/runner/work/MultiScaleArrays.jl/MultiScaleArrays.jl"}
 
 [compat]
-Documenter = "1"        
+Documenter = "1"
 MultiScaleArrays = "1.10"
